templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: scr
  name: sas-scr-${sas-scr-published-name}
  labels:
    app: sas-scr-${sas-scr-published-name}
    sas.com/deployment: sas-viya
    sas.com/podtype: scr
  annotations:
        prometheus.io/path: /prometheus
        prometheus.io/port: '8080'
        prometheus.io/scheme: http
        prometheus.io/scrape: 'true'
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: sas-scr-${sas-scr-published-name}
  template:
    metadata:
      labels:
        app: sas-scr-${sas-scr-published-name}
        sas.com/deployment: sas-viya
        sas.com/podtype: scr
      annotations:
        prometheus.io/path: /prometheus
        prometheus.io/port: "8080"
        prometheus.io/scheme: http
        prometheus.io/scrape: "true"
    spec:
      containers:
        - name: sas-scr-${sas-scr-published-name}
          image: '${sas-scr-image-url}'
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh","-c","sleep 30"]
          resources:
            requests:
              memory: "380Mi"
              cpu: "50m"
            limits:
              memory: "5000Mi"
              cpu: "4000m"
          startupProbe:
            httpGet:
              path: /internal/ready
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /internal/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /internal/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: []
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsUser: 1001
          volumeMounts:
            - mountPath: /tmp
              name: tmp
      tolerations:
      - effect: NoSchedule
        key: workload.sas.com/class
        operator: Equal
        value: stateless      
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: workload.sas.com/class
                operator: NotIn
                values:
                - compute
                - cas
                - stateful
                - connect
                - mas
              matchFields: []
            weight: 100
          - preference:
              matchExpressions:
              - key: workload.sas.com/class
                operator: NotIn
                values:
                - compute
                - cas
                - stateful
                - connect
                - mas
              matchFields: []
            weight: 50
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.azure.com/mode
                operator: NotIn
                values:
                - system
              - key: cloud.google.com/gke-nodepool
                operator: NotIn
                values:
                - default
              matchFields: []
      volumes:
        - emptyDir: {}
          name: tmp
      terminationGracePeriodSeconds: 60
