templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    component-name: sas-scr-${sas-scr-published-name}
  labels:
    deployment: sas-scr-${sas-scr-published-name}
    app: sas-scr-${sas-scr-published-name}
  name: sas-scr-${sas-scr-published-name}
  namespace: scr
spec:
  ports:
  - name: apiserver
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app: sas-scr-${sas-scr-published-name}
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
